--- a/src/app/plant/plant-list/plant-list.component.html
+++ b/src/app/plant/plant-list/plant-list.component.html
@@ -10,7 +10,7 @@
         <img class="example-option-img" aria-hidden [src]="state.image" height="25">
         <span>{{state.name}}</span> |
         <small> <img src="assets/grey-location.png" class="location" alt="">
-          {{state.location}}</small>
+         Location: {{state.location}}</small>
       </mat-option>
     </mat-autocomplete>
   </form>
@@ -33,7 +33,7 @@
   <mat-card class="example-card mat-elevation-z4" *ngFor="let product of products | filter:searchText">
     <img mat-card-image src="{{product.image}}" alt="Photo of a Shiba Inu" class="image">
     <div fxLayout="row">
-      <mat-card-title>{{product.name}}</mat-card-title>
+      <mat-card-title>Product name:{{product.name}}</mat-card-title>
     </div>
     <div class="d-flex ">
       <img src="assets/grey-location.png" class="location" alt="">
@@ -55,3 +55,4 @@
   </mat-card>
 </div>
 <!-- COMMENT -->
+<!-- New comment -->
